--- a/FastAPI_course/pyproject.toml
+++ b/FastAPI_course/pyproject.toml
@@ -5,7 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.116.1",
+    "fastapi[standard]>=0.116.1",
     "gunicorn>=23.0.0",
+    "pydantic>=2.11.7",
     "uvicorn>=0.35.0",
 ]
